--- a/firestore-stripe-payments/extension.yaml
+++ b/firestore-stripe-payments/extension.yaml
@@ -17,7 +17,9 @@ version: 0.3.8
 specVersion: v1beta
 
 displayName: Run Payments with Stripe
-description: Controls access to paid content by syncing your one-time and recurring payments with Firebase Authentication.
+description:
+  Controls access to paid content by syncing your one-time and recurring
+  payments with Firebase Authentication.
 
 icon: icon.png
 
@@ -48,7 +50,8 @@ roles:
       Allows the extension to set custom claims for users.
   - role: datastore.user
     reason: >-
-      Allows the extension to store customers & subscriptions in Cloud Firestore.
+      Allows the extension to store customers & subscriptions in Cloud
+      Firestore.
 
 resources:
   - name: createCustomer
@@ -76,7 +79,8 @@ resources:
   - name: createPortalLink
     type: firebaseextensions.v1beta.function
     description: >-
-      Creates links to the customer portal for the user to manage their payment & subscription details.
+      Creates links to the customer portal for the user to manage their payment
+      & subscription details.
     properties:
       location: ${LOCATION}
       runtime: nodejs18
@@ -85,7 +89,8 @@ resources:
   - name: handleWebhookEvents
     type: firebaseextensions.v1beta.function
     description: >-
-      Handles Stripe webhook events to keep subscription statuses in sync and update custom claims.
+      Handles Stripe webhook events to keep subscription statuses in sync and
+      update custom claims.
     properties:
       location: ${LOCATION}
       runtime: nodejs18
@@ -94,7 +99,8 @@ resources:
   - name: onUserDeleted
     type: firebaseextensions.v1beta.function
     description: >-
-      Deletes the Stripe customer object and cancels all their subscriptions when the user is deleted in Firebase Authentication.
+      Deletes the Stripe customer object and cancels all their subscriptions
+      when the user is deleted in Firebase Authentication.
     properties:
       location: ${LOCATION}
       runtime: nodejs18
@@ -105,7 +111,8 @@ resources:
   - name: onCustomerDataDeleted
     type: firebaseextensions.v1beta.function
     description: >-
-      Deletes the Stripe customer object and cancels all their subscriptions when the customer doc in Cloud Firestore is deleted.
+      Deletes the Stripe customer object and cancels all their subscriptions
+      when the customer doc in Cloud Firestore is deleted.
     properties:
       location: ${LOCATION}
       runtime: nodejs18
@@ -117,10 +124,10 @@ params:
   - param: LOCATION
     label: Cloud Functions deployment location
     description: >-
-      Where do you want to deploy the functions created for this extension?
-      You usually want a location close to your database.
-      For help selecting a location, refer to the
-      [location selection guide](https://firebase.google.com/docs/functions/locations).
+      Where do you want to deploy the functions created for this extension? You
+      usually want a location close to your database. For help selecting a
+      location, refer to the [location selection
+      guide](https://firebase.google.com/docs/functions/locations).
     type: select
     options:
       - label: Iowa (us-central1)
@@ -130,7 +137,7 @@ params:
       - label: Northern Virginia (us-east4)
         value: us-east4
       - label: Oregon (us-west1)
-        value: us-west1        
+        value: us-west1
       - label: Los Angeles (us-west2)
         value: us-west2
       - label: Salt Lake City (us-west3)
@@ -172,70 +179,83 @@ params:
   - param: PRODUCTS_COLLECTION
     label: Products and pricing plans collection
     description: >-
-      What is the path to the Cloud Firestore collection where the extension should store Stripe pricing plans?
+      What is the path to the Cloud Firestore collection where the extension
+      should store Stripe pricing plans?
     default: products
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
-    validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/collection".
+    validationErrorMessage:
+      Firestore collection paths must be an odd number of segments separated by
+      slashes, e.g. "path/to/collection".
     required: true
 
   - param: CUSTOMERS_COLLECTION
     label: Customer details and subscriptions collection
     description: >-
-      What is the path to the Cloud Firestore collection where the extension should store Stripe customer details?
-      This can be the location of an existing user collection, the extension will not overwrite your existing data but rather merge the Stripe data into your existing `uid` docs.
+      What is the path to the Cloud Firestore collection where the extension
+      should store Stripe customer details? This can be the location of an
+      existing user collection, the extension will not overwrite your existing
+      data but rather merge the Stripe data into your existing `uid` docs.
     default: customers
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
-    validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/collection".
+    validationErrorMessage:
+      Firestore collection paths must be an odd number of segments separated by
+      slashes, e.g. "path/to/collection".
     required: true
 
   - param: STRIPE_CONFIG_COLLECTION
     label: Stripe configuration collection
     description: >-
-      What is the path to the Cloud Firestore collection where the extension should store Stripe configuration?
+      What is the path to the Cloud Firestore collection where the extension
+      should store Stripe configuration?
     default: configuration
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
-    validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/collection".
+    validationErrorMessage:
+      Firestore collection paths must be an odd number of segments separated by
+      slashes, e.g. "path/to/collection".
     required: false
 
   - param: SYNC_USERS_ON_CREATE
     label: Sync new users to Stripe customers and Cloud Firestore
     description: >-
       Do you want to automatically sync new users to customer objects in Stripe?
-      If set to 'Sync', the extension will create a new customer object in Stripe
-      and add a new doc to the customer collection in Firestore when a new user signs up via Firebase Authentication.
-      If set to 'Do not sync' (default), the extension will create the customer object "on the fly" with the first checkout session creation.
+      If set to 'Sync', the extension will create a new customer object in
+      Stripe and add a new doc to the customer collection in Firestore when a
+      new user signs up via Firebase Authentication. If set to 'Do not sync'
+      (default), the extension will create the customer object "on the fly" with
+      the first checkout session creation.
     type: select
     options:
-      - label: 'Do not sync'
-        value: 'Do not sync'
-      - label: 'Sync'
-        value: 'Sync'
-    default: 'Do not sync'
+      - label: "Do not sync"
+        value: "Do not sync"
+      - label: "Sync"
+        value: "Sync"
+    default: "Do not sync"
     required: true
 
   - param: DELETE_STRIPE_CUSTOMERS
     label: Automatically delete Stripe customer objects
     description: >-
-      Do you want to automatically delete customer objects in Stripe?
-      When a user is deleted in Firebase Authentication or in Cloud Firestore and set to 'Auto delete'
-      the extension will delete their customer object in Stripe which will immediately cancel all subscriptions for the user.
+      Do you want to automatically delete customer objects in Stripe? When a
+      user is deleted in Firebase Authentication or in Cloud Firestore and set
+      to 'Auto delete' the extension will delete their customer object in Stripe
+      which will immediately cancel all subscriptions for the user.
     type: select
     options:
-      - label: 'Do not delete'
-        value: 'Do not delete'
-      - label: 'Auto delete'
-        value: 'Auto delete'
-    default: 'Do not delete'
+      - label: "Do not delete"
+        value: "Do not delete"
+      - label: "Auto delete"
+        value: "Auto delete"
+    default: "Do not delete"
     required: true
 
   - param: STRIPE_API_KEY
     label: Stripe API key with restricted access
     type: secret
     description: >-
-      What is your Stripe API key?
-      We recommend creating a new [restricted key](https://stripe.com/docs/keys#limit-access)
-      with write access only for the "Customers", "Checkout Sessions" and "Customer portal" resources.
-      And read-only access for the "Subscriptions" and "Prices" resources.
+      What is your Stripe API key? We recommend creating a new [restricted
+      key](https://stripe.com/docs/keys#limit-access) with write access only for
+      the "Customers", "Checkout Sessions" and "Customer portal" resources. And
+      read-only access for the "Subscriptions" and "Prices" resources.
     example: rk_live_1234567890
     required: true
 
@@ -243,20 +263,23 @@ params:
     label: Stripe webhook secret
     type: secret
     description: >-
-      This is your signing secret for a Stripe-registered webhook.
-      This webhook can only be registered after installation.
-      Leave this value untouched during installation, then follow the
-      postinstall instructions for registering your webhook
-      and configuring this value.
+      This is your signing secret for a Stripe-registered webhook. This webhook
+      can only be registered after installation. Leave this value untouched
+      during installation, then follow the postinstall instructions for
+      registering your webhook and configuring this value.
     example: whsec_1234567890
     required: false
 
   - param: CREATE_CHECKOUT_SESSION_MIN_INSTANCES
     label: Minimum instances for createCheckoutSession function
     description: >-
-      Set the minimum number of function instances that should be always be available to create Checkout Sessions.
-      This number can be adjusted to reduce cold starts and increase the responsiveness
-      of Checkout Session creation requests. Suggested values are 0 or 1. Please note this setting will likely incur billing costss, see the [Firebase documentation](https://firebase.google.com/docs/functions/manage-functions#reduce_the_number_of_cold_starts) for more information.
+      Set the minimum number of function instances that should be always be
+      available to create Checkout Sessions. This number can be adjusted to
+      reduce cold starts and increase the responsiveness of Checkout Session
+      creation requests. Suggested values are 0 or 1. Please note this setting
+      will likely incur billing costss, see the [Firebase
+      documentation](https://firebase.google.com/docs/functions/manage-functions#reduce_the_number_of_cold_starts)
+      for more information.
     default: 0
     required: true
 
@@ -276,13 +299,18 @@ events:
   - type: com.stripe.v1.checkout.session.completed
     description: Occurs when a Checkout Session has been successfully completed.
   - type: com.stripe.v1.checkout.session.async_payment_succeeded
-    description: Occurs when a payment intent using a delayed payment method finally succeeds.
+    description:
+      Occurs when a payment intent using a delayed payment method finally
+      succeeds.
   - type: com.stripe.v1.checkout.session.async_payment_failed
-    description: Occurs when a payment intent using a delayed payment method fails.
+    description:
+      Occurs when a payment intent using a delayed payment method fails.
   - type: com.stripe.v1.customer.subscription.created
     description: Occurs whenever a customer is signed up for a new plan.
   - type: com.stripe.v1.customer.subscription.updated
-    description: Occurs whenever a subscription changes (e.g., switching from one plan to another, or changing the status from trial to active).
+    description:
+      Occurs whenever a subscription changes (e.g., switching from one plan to
+      another, or changing the status from trial to active).
   - type: com.stripe.v1.customer.subscription.deleted
     description: Occurs whenever a customer's subscription ends.
   - type: com.stripe.v1.tax_rate.created
@@ -290,17 +318,26 @@ events:
   - type: com.stripe.v1.tax_rate.updated
     description: Occurs whenever a tax rate is updated.
   - type: com.stripe.v1.invoice.paid
-    description: Occurs whenever an invoice payment attempt succeeds or an invoice is marked as paid out-of-band.
+    description:
+      Occurs whenever an invoice payment attempt succeeds or an invoice is
+      marked as paid out-of-band.
   - type: com.stripe.v1.invoice.payment_succeeded
     description: Occurs whenever an invoice payment attempt succeeds.
   - type: com.stripe.v1.invoice.payment_failed
-    description: Occurs whenever an invoice payment attempt fails, due either to a declined payment or to the lack of a stored payment method.
+    description:
+      Occurs whenever an invoice payment attempt fails, due either to a declined
+      payment or to the lack of a stored payment method.
   - type: com.stripe.v1.invoice.upcoming
-    description: Occurs X number of days before a subscription is scheduled to create an invoice that is automatically charged—where X is determined by your subscriptions settings.
+    description:
+      Occurs X number of days before a subscription is scheduled to create an
+      invoice that is automatically charged—where X is determined by your
+      subscriptions settings.
   - type: com.stripe.v1.invoice.marked_uncollectible
     description: Occurs whenever an invoice is marked uncollectible.
   - type: com.stripe.v1.invoice.payment_action_required
-    description: Occurs whenever an invoice payment attempt requires further user action to complete.
+    description:
+      Occurs whenever an invoice payment attempt requires further user action to
+      complete.
   - type: com.stripe.v1.payment_intent.processing
     description: Occurs when a PaymentIntent has started processing.
   - type: com.stripe.v1.payment_intent.succeeded
@@ -308,4 +345,6 @@ events:
   - type: com.stripe.v1.payment_intent.canceled
     description: Occurs when a PaymentIntent is canceled.
   - type: com.stripe.v1.payment_intent.payment_failed
-    description: Occurs when a PaymentIntent has failed the attempt to create a payment method or a payment.
+    description:
+      Occurs when a PaymentIntent has failed the attempt to create a payment
+      method or a payment.
